<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    tools:context=".sarkari">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/im2"
            android:layout_width="500dp"
            android:layout_height="181dp"
            android:layout_marginLeft="-35dp"
            android:src="@drawable/yoj" />
        <TextView
            android:id="@+id/f1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#171a18"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/one" ></TextView>



        <TextView
            android:id="@+id/f2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#171a18"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/two" ></TextView>

        <TextView
            android:id="@+id/f3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#171a18"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/three" ></TextView>

        <TextView
            android:id="@+id/f4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#171a18"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/four" ></TextView>

        <TextView
            android:id="@+id/f5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:textColor="#171a18"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/five" ></TextView>



    </LinearLayout>
</ScrollView>
